--- a/.env
+++ b/.env
@@ -6,14 +6,14 @@ EBOOKING_WS = https://ebooking5.juantoselli.com/ws
 CLIENTS_URL = https://clients.juantoselli.com/api/
 IDENTITY_URL = https://identity.juantoselli.com/api/
 CLOUD_MESSAGING_URL = https://notifications.juantoselli.com/api/
-FIREBASE_API_KEY = AIzaSyCj0sR2ldnTpOMP9lz6WG-Cq48WGwv7hvA
-FIREBASE_AUTH_DOMAIN = ebooking-web.firebaseapp.com
-FIREBASE_DATABASE_URL = https://ebooking-web-default-rtdb.firebaseio.com
-FIREBASE_PROJECT_ID = ebooking-web
-FIREBASE_STORAGE_BUCKET = ebooking-web.appspot.com
-FIREBASE_MESSAGING_SENDER_ID = 116153973786
-FIREBASE_APP_ID = 1:116153973786:web:575fe20badf7eb30fae5a3
-FIREBASE_MEASUREMENT_ID = G-H0YRS3DEYZ
+FIREBASE_API_KEY = AIzaSyAOjqOTgoJ7uRWsw-k503UKvgjz-xjNwns
+FIREBASE_AUTH_DOMAIN = letme-travel.firebaseapp.com
+FIREBASE_DATABASE_URL = https://letme-travel-default-rtdb.firebaseio.com
+FIREBASE_PROJECT_ID = letme-travel
+FIREBASE_STORAGE_BUCKET = letme-travel.appspot.com
+FIREBASE_MESSAGING_SENDER_ID = 408888542668
+FIREBASE_APP_ID = 1:408888542668:web:582c934a32420e8ff40969
+FIREBASE_MEASUREMENT_ID = G-MC46DBRWK7
 CDN_URL = https://api.juantoselli.com/public/
 AGENCY_ID = 540b0fb929116d03c81eb99a
 WEBSITE_ID = 540b0fb929116d03c81eb99b
